lib/src/raft.h

struct bop_raft_buffer;
struct bop_raft_srv_config;
struct bop_raft_srv_config_ptr;
struct bop_raft_srv_config_vec;
BOP_API size_t bop_raft_srv_config_vec_size(struct bop_raft_srv_config_vec *vec);
BOP_API struct bop_raft_srv_config *bop_raft_srv_config_vec_get(struct bop_raft_srv_config_vec *vec, size_t idx);
BOP_API struct bop_raft_srv_config_ptr *bop_raft_srv_config_ptr_make(struct bop_raft_srv_config *config);
BOP_API void bop_raft_srv_config_ptr_delete(const struct bop_raft_srv_config_ptr *config);
BOP_API struct bop_raft_srv_config *bop_raft_srv_config_make(
    int32_t id,
    int32_t dc_id,
    const char *endpoint,
    size_t endpoint_size,
    const char *aux,
    size_t aux_size,
    bool learner,
    int32_t priority
);
BOP_API void bop_raft_srv_config_delete(const struct bop_raft_srv_config *config);
BOP_API int32_t bop_raft_srv_config_id(struct bop_raft_srv_config *cfg);
BOP_API int32_t bop_raft_srv_config_dc_id(struct bop_raft_srv_config *cfg);
BOP_API const char *bop_raft_srv_config_endpoint(struct bop_raft_srv_config *cfg);
BOP_API size_t bop_raft_srv_config_endpoint_size(struct bop_raft_srv_config *cfg);
BOP_API const char *bop_raft_srv_config_aux(struct bop_raft_srv_config *cfg);
BOP_API size_t bop_raft_srv_config_aux_size(struct bop_raft_srv_config *cfg);
BOP_API bool bop_raft_srv_config_is_learner(struct bop_raft_srv_config *cfg);
BOP_API void bop_raft_srv_config_set_is_learner(struct bop_raft_srv_config *cfg, bool learner);
BOP_API bool bop_raft_srv_config_is_new_joiner(struct bop_raft_srv_config *cfg);
BOP_API void bop_raft_srv_config_set_new_joiner(struct bop_raft_srv_config *cfg, bool new_joiner);
BOP_API int32_t bop_raft_srv_config_priority(struct bop_raft_srv_config *cfg);
BOP_API void bop_raft_srv_config_set_priority(struct bop_raft_srv_config *cfg, int32_t priority);
struct bop_raft_srv_state;
BOP_API struct bop_raft_buffer *bop_raft_srv_state_serialize(struct bop_raft_srv_state *state);
BOP_API struct bop_raft_srv_state *bop_raft_srv_state_deserialize(struct bop_raft_buffer *buf);
BOP_API void bop_raft_srv_state_delete(const struct bop_raft_srv_state *state);
BOP_API uint64_t bop_raft_srv_state_term(const struct bop_raft_srv_state *state);
BOP_API int32_t bop_raft_srv_state_voted_for(const struct bop_raft_srv_state *state);
BOP_API bool bop_raft_srv_state_is_election_timer_allowed(const struct bop_raft_srv_state *state);
BOP_API bool bop_raft_srv_state_is_catching_up(const struct bop_raft_srv_state *state);
BOP_API bool bop_raft_srv_state_is_receiving_snapshot(const struct bop_raft_srv_state *state);
struct bop_raft_logger_ptr;
typedef void (*bop_raft_logger_put_details_func)(
    void *user_data, int32_t level, const char *source_file, const char *func_name, size_t line_number,
    const char *log_line, size_t log_line_size
);
BOP_API struct bop_raft_logger_ptr *
bop_raft_logger_make(void *user_data, bop_raft_logger_put_details_func callback);
BOP_API void bop_raft_logger_delete(const struct bop_raft_logger_ptr *logger);
typedef void (*bop_raft_asio_service_worker_start_fn)(void *user_data, uint32_t value);
typedef void (*bop_raft_asio_service_worker_stop_fn)(void *user_data, uint32_t value);
typedef bool (*bop_raft_asio_service_verify_sn_fn)(void *user_data, const char *data, size_t size);
typedef struct SSL_CTX * (*bop_raft_asio_service_ssl_ctx_provider_fn)(void *user_data);
typedef void (*bop_raft_asio_service_custom_resolver_response_fn)(
    void *response_impl, const char *v1, size_t v1_size, const char *v2, size_t v2_size,
    int32_t error_code
);
typedef void (*bop_raft_asio_service_custom_resolver_fn)(
    void *user_data, void *response_impl, const char *v1, size_t v1_size, const char *v2,
    size_t v2_size, bop_raft_asio_service_custom_resolver_response_fn response
);
typedef void (*bop_raft_asio_service_corrupted_msg_handler_fn)(
    void *user_data, unsigned char *header, size_t header_size, unsigned char *payload,
    size_t payload_size
);
struct bop_raft_asio_service_ptr;
struct bop_raft_asio_options {
    size_t thread_pool_size;
    void *worker_start_user_data;
    bop_raft_asio_service_worker_start_fn worker_start;
    void *worker_stop_user_data;
    bop_raft_asio_service_worker_stop_fn worker_stop;
    bool enable_ssl;
    bool skip_verification;
    char *server_cert_file;
    char *server_key_file;
    char *root_cert_file;
    bool invoke_req_cb_on_empty_meta;
    bool invoke_resp_cb_on_empty_meta;
    void *verify_sn_user_data;
    bop_raft_asio_service_verify_sn_fn verify_sn;
    void *ssl_context_provider_server_user_data;
    bop_raft_asio_service_ssl_ctx_provider_fn ssl_context_provider_server;
    void *ssl_context_provider_client_user_data;
    bop_raft_asio_service_ssl_ctx_provider_fn ssl_context_provider_client;
    void *custom_resolver_user_data;
    bop_raft_asio_service_custom_resolver_fn custom_resolver;
    bool replicate_log_timestamp;
    bool crc_on_entire_message;
    bool crc_on_payload;
    void *corrupted_msg_handler_user_data;
    bop_raft_asio_service_corrupted_msg_handler_fn corrupted_msg_handler;
    bool streaming_mode;
};
BOP_API struct bop_raft_asio_service_ptr *bop_raft_asio_service_make(
    struct bop_raft_asio_options *options,
    struct bop_raft_logger_ptr *logger
);
BOP_API void bop_raft_asio_service_delete(const struct bop_raft_asio_service_ptr *asio_service);
BOP_API void bop_raft_asio_service_stop(struct bop_raft_asio_service_ptr *asio_service);
BOP_API uint32_t bop_raft_asio_service_get_active_workers(struct bop_raft_asio_service_ptr *asio_service);
struct bop_raft_delayed_task_ptr;
typedef void (*bop_raft_delayed_task_func)(void *user_data);
BOP_API struct bop_raft_delayed_task_ptr *bop_raft_delayed_task_make(
    void *user_data,
    int32_t type,
    bop_raft_delayed_task_func exec_func,
    bop_raft_delayed_task_func deleter_func
);
BOP_API void bop_raft_delayed_task_delete(const struct bop_raft_delayed_task_ptr *task);
BOP_API void bop_raft_delayed_task_cancel(struct bop_raft_delayed_task_ptr *task);
BOP_API void bop_raft_delayed_task_reset(struct bop_raft_delayed_task_ptr *task);
BOP_API int32_t bop_raft_delayed_task_type(struct bop_raft_delayed_task_ptr *task);
BOP_API void *bop_raft_delayed_task_user_data(struct bop_raft_delayed_task_ptr *task);
BOP_API void bop_raft_asio_service_schedule(
    struct bop_raft_asio_service_ptr *asio_service,
    struct bop_raft_delayed_task_ptr *delayed_task,
    int32_t milliseconds
);
struct bop_raft_rpc_listener_ptr;
BOP_API struct bop_raft_rpc_listener_ptr *bop_raft_asio_rpc_listener_make(
    struct bop_raft_asio_service_ptr *asio_service,
    uint16_t listening_port,
    struct bop_raft_logger_ptr *logger
);
BOP_API void bop_raft_asio_rpc_listener_delete(const struct bop_raft_rpc_listener_ptr *rpc_listener);
struct bop_raft_rpc_client_ptr;
BOP_API struct bop_raft_rpc_client_ptr *bop_raft_asio_rpc_client_make(
    struct bop_raft_asio_service_ptr *asio_service,
    const char *endpoint,
    size_t endpoint_size
);