lib/src/uws.h


typedef void* uws_res_t;
typedef void* uws_loop_t;
BOP_API void uws_loop_defer(uws_loop_t loop, void* user_data, void (*callback)(uws_loop_t loop, void* user_data));
BOP_API void uws_res_defer(uws_res_t res, void* user_data, void (*callback)(uws_loop_t loop, uws_res_t res, void* user_data));
BOP_API void uws_res_on_writable(uws_res_t res, void* user_data, bool (*handler)(uws_res_t res, void* user_data, uint64_t m));