rust/bop-rs/src/bindings.rs

unsafe extern "C" {
    pub fn bop_raft_srv_config_vec_size(vec: *mut bop_raft_srv_config_vec) -> usize;
}
unsafe extern "C" {
    pub fn bop_raft_srv_config_vec_get(
        vec: *mut bop_raft_srv_config_vec,
        idx: usize,
    ) -> *mut bop_raft_srv_config;
}
unsafe extern "C" {
    pub fn bop_raft_srv_config_ptr_make(
        config: *mut bop_raft_srv_config,
    ) -> *mut bop_raft_srv_config_ptr;
}
unsafe extern "C" {
    pub fn bop_raft_srv_config_ptr_delete(config: *const bop_raft_srv_config_ptr);
}
unsafe extern "C" {
    pub fn bop_raft_srv_config_make(
        id: i32,
        dc_id: i32,
        endpoint: *const ::std::os::raw::c_char,
        endpoint_size: usize,
        aux: *const ::std::os::raw::c_char,
        aux_size: usize,
        learner: bool,
        priority: i32,
    ) -> *mut bop_raft_srv_config;
}
unsafe extern "C" {
    pub fn bop_raft_srv_config_delete(config: *const bop_raft_srv_config);
}
unsafe extern "C" {
    pub fn bop_raft_srv_config_id(cfg: *mut bop_raft_srv_config) -> i32;
}
unsafe extern "C" {
    pub fn bop_raft_srv_config_dc_id(cfg: *mut bop_raft_srv_config) -> i32;
}
unsafe extern "C" {
    pub fn bop_raft_srv_config_endpoint(
        cfg: *mut bop_raft_srv_config,
    ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn bop_raft_srv_config_endpoint_size(cfg: *mut bop_raft_srv_config) -> usize;
}
unsafe extern "C" {
    #[doc = " Custom string given by user.\n WARNING: It SHOULD NOT contain NULL character,\n          as\n it will be stored as a C-style string."]
    pub fn bop_raft_srv_config_aux(cfg: *mut bop_raft_srv_config) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn bop_raft_srv_config_aux_size(cfg: *mut bop_raft_srv_config) -> usize;
}
unsafe extern "C" {
    #[doc = " `true` if this node is learner.\n Learner will not initiate or participate in leader\n election."]
    pub fn bop_raft_srv_config_is_learner(cfg: *mut bop_raft_srv_config) -> bool;
}
unsafe extern "C" {
    pub fn bop_raft_srv_config_set_is_learner(cfg: *mut bop_raft_srv_config, learner: bool);
}
unsafe extern "C" {
    #[doc = " `true` if this node is a new joiner, but not yet fully synced.\n New joiner will not\n initiate or participate in leader election."]
    pub fn bop_raft_srv_config_is_new_joiner(cfg: *mut bop_raft_srv_config) -> bool;
}
unsafe extern "C" {
    pub fn bop_raft_srv_config_set_new_joiner(cfg: *mut bop_raft_srv_config, new_joiner: bool);
}
unsafe extern "C" {
    #[doc = " Priority of this node.\n 0 will never be a leader."]
    pub fn bop_raft_srv_config_priority(cfg: *mut bop_raft_srv_config) -> i32;
}
unsafe extern "C" {
    pub fn bop_raft_srv_config_set_priority(cfg: *mut bop_raft_srv_config, priority: i32);
}
#[doc = "\n nuraft::svr_state\n"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_srv_state {
    _unused: [u8; 0],
}
unsafe extern "C" {
    pub fn bop_raft_srv_state_serialize(state: *mut bop_raft_srv_state) -> *mut bop_raft_buffer;
}
unsafe extern "C" {
    pub fn bop_raft_srv_state_deserialize(buf: *mut bop_raft_buffer) -> *mut bop_raft_srv_state;
}
unsafe extern "C" {
    pub fn bop_raft_srv_state_delete(state: *const bop_raft_srv_state);
}
unsafe extern "C" {
    #[doc = " Term"]
    pub fn bop_raft_srv_state_term(state: *const bop_raft_srv_state) -> u64;
}
unsafe extern "C" {
    #[doc = " Server ID that this server voted for.\n `-1` if not voted."]
    pub fn bop_raft_srv_state_voted_for(state: *const bop_raft_srv_state) -> i32;
}
unsafe extern "C" {
    #[doc = " `true` if election timer is allowed."]
    pub fn bop_raft_srv_state_is_election_timer_allowed(state: *const bop_raft_srv_state) -> bool;
}
unsafe extern "C" {
    #[doc = " true if this server has joined the cluster but has not yet\n fully caught up with the latest\n log. While in the catch-up status,\n this server will not receive normal append_entries\n requests."]
    pub fn bop_raft_srv_state_is_catching_up(state: *const bop_raft_srv_state) -> bool;
}
unsafe extern "C" {
    #[doc = " `true` if this server is receiving a snapshot.\n Same as `catching_up_`, it must be a\n durable flag so as not to be\n reset after restart. While this flag is set, this server will\n neither\n receive normal append_entries requests nor initiate election."]
    pub fn bop_raft_srv_state_is_receiving_snapshot(state: *const bop_raft_srv_state) -> bool;
}
#[doc = "\n nuraft::logger\n"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_logger_ptr {
    _unused: [u8; 0],
}
#[doc = " Put a log with level, line number, function name,\n and file name.\n\n Log level info:\n\n Trace:    6\n    Debug:    5\n    Info:     4\n    Warning:  3\n    Error:    2\n    Fatal:\n 1\n\n @param level Level of given log.\n @param source_file Name of file where the log is\n located.\n @param func_name Name of function where the log is located.\n @param line_number\n Line number of the log.\n @param log_line Contents of the log."]
pub type bop_raft_logger_put_details_func = ::std::option::Option<
    unsafe extern "C" fn(
        user_data: *mut ::std::os::raw::c_void,
        level: i32,
        source_file: *const ::std::os::raw::c_char,
        func_name: *const ::std::os::raw::c_char,
        line_number: usize,
        log_line: *const ::std::os::raw::c_char,
        log_line_size: usize,
    ),
>;
unsafe extern "C" {
    pub fn bop_raft_logger_make(
        user_data: *mut ::std::os::raw::c_void,
        callback: bop_raft_logger_put_details_func,
    ) -> *mut bop_raft_logger_ptr;
}
unsafe extern "C" {
    pub fn bop_raft_logger_delete(logger: *const bop_raft_logger_ptr);
}
#[doc = "\n nuraft::asio_service\n"]
pub type bop_raft_asio_service_worker_start_fn =
    ::std::option::Option<unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void, value: u32)>;
pub type bop_raft_asio_service_worker_stop_fn =
    ::std::option::Option<unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void, value: u32)>;
pub type bop_raft_asio_service_verify_sn_fn = ::std::option::Option<
    unsafe extern "C" fn(
        user_data: *mut ::std::os::raw::c_void,
        data: *const ::std::os::raw::c_char,
        size: usize,
    ) -> bool,
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct SSL_CTX {
    _unused: [u8; 0],
}
pub type bop_raft_asio_service_ssl_ctx_provider_fn = ::std::option::Option<
    unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void) -> *mut SSL_CTX,
>;
pub type bop_raft_asio_service_custom_resolver_response_fn = ::std::option::Option<
    unsafe extern "C" fn(
        response_impl: *mut ::std::os::raw::c_void,
        v1: *const ::std::os::raw::c_char,
        v1_size: usize,
        v2: *const ::std::os::raw::c_char,
        v2_size: usize,
        error_code: i32,
    ),
>;
pub type bop_raft_asio_service_custom_resolver_fn = ::std::option::Option<
    unsafe extern "C" fn(
        user_data: *mut ::std::os::raw::c_void,
        response_impl: *mut ::std::os::raw::c_void,
        v1: *const ::std::os::raw::c_char,
        v1_size: usize,
        v2: *const ::std::os::raw::c_char,
        v2_size: usize,
        response: bop_raft_asio_service_custom_resolver_response_fn,
    ),
>;
pub type bop_raft_asio_service_corrupted_msg_handler_fn = ::std::option::Option<
    unsafe extern "C" fn(
        user_data: *mut ::std::os::raw::c_void,
        header: *mut ::std::os::raw::c_uchar,
        header_size: usize,
        payload: *mut ::std::os::raw::c_uchar,
        payload_size: usize,
    ),
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_asio_service_ptr {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_asio_options {
    pub thread_pool_size: usize,
    pub worker_start_user_data: *mut ::std::os::raw::c_void,
    pub worker_start: bop_raft_asio_service_worker_start_fn,
    pub worker_stop_user_data: *mut ::std::os::raw::c_void,
    pub worker_stop: bop_raft_asio_service_worker_stop_fn,
    pub enable_ssl: bool,
    pub skip_verification: bool,
    pub server_cert_file: *mut ::std::os::raw::c_char,
    pub server_key_file: *mut ::std::os::raw::c_char,
    pub root_cert_file: *mut ::std::os::raw::c_char,
    pub invoke_req_cb_on_empty_meta: bool,
    pub invoke_resp_cb_on_empty_meta: bool,
    pub verify_sn_user_data: *mut ::std::os::raw::c_void,
    pub verify_sn: bop_raft_asio_service_verify_sn_fn,
    pub ssl_context_provider_server_user_data: *mut ::std::os::raw::c_void,
    pub ssl_context_provider_server: bop_raft_asio_service_ssl_ctx_provider_fn,
    pub ssl_context_provider_client_user_data: *mut ::std::os::raw::c_void,
    pub ssl_context_provider_client: bop_raft_asio_service_ssl_ctx_provider_fn,
    pub custom_resolver_user_data: *mut ::std::os::raw::c_void,
    pub custom_resolver: bop_raft_asio_service_custom_resolver_fn,
    pub replicate_log_timestamp: bool,
    pub crc_on_entire_message: bool,
    pub crc_on_payload: bool,
    pub corrupted_msg_handler_user_data: *mut ::std::os::raw::c_void,
    pub corrupted_msg_handler: bop_raft_asio_service_corrupted_msg_handler_fn,
    pub streaming_mode: bool,
}
impl Default for bop_raft_asio_options {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
unsafe extern "C" {
    pub fn bop_raft_asio_service_make(
        options: *mut bop_raft_asio_options,
        logger: *mut bop_raft_logger_ptr,
    ) -> *mut bop_raft_asio_service_ptr;
}
unsafe extern "C" {
    pub fn bop_raft_asio_service_delete(asio_service: *const bop_raft_asio_service_ptr);
}
unsafe extern "C" {
    pub fn bop_raft_asio_service_stop(asio_service: *mut bop_raft_asio_service_ptr);
}
unsafe extern "C" {
    pub fn bop_raft_asio_service_get_active_workers(
        asio_service: *mut bop_raft_asio_service_ptr,
    ) -> u32;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_delayed_task_ptr {
    _unused: [u8; 0],
}
pub type bop_raft_delayed_task_func =
    ::std::option::Option<unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void)>;
unsafe extern "C" {
    pub fn bop_raft_delayed_task_make(
        user_data: *mut ::std::os::raw::c_void,
        type_: i32,
        exec_func: bop_raft_delayed_task_func,
        deleter_func: bop_raft_delayed_task_func,
    ) -> *mut bop_raft_delayed_task_ptr;
}
unsafe extern "C" {
    pub fn bop_raft_delayed_task_delete(task: *const bop_raft_delayed_task_ptr);
}
unsafe extern "C" {
    pub fn bop_raft_delayed_task_cancel(task: *mut bop_raft_delayed_task_ptr);
}
unsafe extern "C" {
    pub fn bop_raft_delayed_task_reset(task: *mut bop_raft_delayed_task_ptr);
}
unsafe extern "C" {
    pub fn bop_raft_delayed_task_type(task: *mut bop_raft_delayed_task_ptr) -> i32;
}
unsafe extern "C" {
    pub fn bop_raft_delayed_task_user_data(
        task: *mut bop_raft_delayed_task_ptr,
    ) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn bop_raft_asio_service_schedule(
        asio_service: *mut bop_raft_asio_service_ptr,
        delayed_task: *mut bop_raft_delayed_task_ptr,
        milliseconds: i32,
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_rpc_listener_ptr {
    _unused: [u8; 0],
}
unsafe extern "C" {
    pub fn bop_raft_asio_rpc_listener_make(
        asio_service: *mut bop_raft_asio_service_ptr,
        listening_port: u16,
        logger: *mut bop_raft_logger_ptr,
    ) -> *mut bop_raft_rpc_listener_ptr;
}
unsafe extern "C" {
    pub fn bop_raft_asio_rpc_listener_delete(rpc_listener: *const bop_raft_rpc_listener_ptr);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_rpc_client_ptr {
    _unused: [u8; 0],
}
unsafe extern "C" {
    pub fn bop_raft_asio_rpc_client_make(
        asio_service: *mut bop_raft_asio_service_ptr,
        endpoint: *const ::std::os::raw::c_char,
        endpoint_size: usize,
    ) -> *mut bop_raft_rpc_client_ptr;
}
